<resources>
    <string name="app_name">Qoogol</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Dashboard</string>
    <string name="menu_fav">Favourite</string>
    <string name="my_pdf">My Pdf Documents</string>
    <string name="file_name_chars">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_</string>
    <string name="menu_course">Course</string>
    <string name="menu_exam">Exam</string>
    <string name="menu_test_attempt">Test Attempt History</string>
    <string name="menu_subject">Subject</string>
    <string name="menu_chapter">Chapter</string>
    <string name="menu_rating">Rating</string>
    <string name="menu_diff_level">Difficulty Level</string>
    <string name="menu_edit_profile">Profile</string>
    <string name="user_profile">User Profile</string>
    <string name="menu_test_details">Test Details</string>
    <string name="menu_scq_image">Scq Image</string>
    <string name="menu_scq_imagetxt">Scq Image with Text</string>
    <string name="menu_mcq_image">Mcq Image</string>
    <string name="menu_mcq_imagetxt">Mcq Image with Text</string>
    <string name="menu_mtp_image">Match the Pair Image</string>
    <string name="menu_fill_the_blanks">Fill The Blanks</string>
    <string name="menu_true_false">True Or False</string>
    <string name="menu_up_scq">Scan Question</string>
    <string name="menu_scan_quest">Scan Question</string>
    <string name="menu_select_quest_type">Select Question Type</string>
    <string name="menu_test_practice">Practice Test</string>
    <string name="menu_test_my">My Test</string>
    <string name="menu_test_popular">Popular Test</string>
    <string name="menu_test_attended_by_friends">Attended By Friends</string>
    <string name="menu_test_shared_with_you">Shared With You</string>
    <string name="menu_test_shared_by_you">Shared By You</string>
    <string name="menu_test_create">Create Test</string>
    <string name="menu_quest_trending">Trending</string>
    <string name="menu_quest_popular">Popular</string>
    <string name="menu_quest_recent">Recent</string>
    <string name="menu_ask_doubts">Doubts</string>
    <string name="menu_review">Review</string>
    <string name="menu_published">Published</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">Settings</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="sign_in_title">Sign In</string>
    <string name="select">Select</string>
    <string name="classes">Class</string>
    <string name="university">University/Board</string>
    <string name="institute">Institute</string>
    <string name="country">Country</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="email_mobile">Email or Mobile Number</string>
    <string name="email_mobile_username">Email or Mobile Number or User Name</string>
    <string name="password_otp">Password or OTP</string>
    <string name="otp_new">OTP</string>
    <string name="otp_password">Password or OTP</string>
    <string name="existing_user"><u>Existing User?</u></string>
    <string name="new_user"><u>New User?</u></string>
    <string name="password_new">Password</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome_msg">Welcome to Qoogol.</string>
    <string name="msg">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="use_social_account">Use your social account</string>
    <string name="terms_privacy">By signing in your account you agree to our <u>Terms</u> &amp; <u>Privacy</u></string>
    <string name="valid_input_chars">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ </string>
    <string name="empty_email">Please enter email.</string>
    <string name="empty_password">Please enter password.</string>
    <string name="empty_first_name">Please enter first name.</string>
    <string name="empty_last_name">Please enter last name.</string>
    <string name="empty_mobile">Please enter valid mobile number.</string>
    <string name="empty_confirm_password">Please re-enter password.</string>
    <string name="valid_email">Please enter valid email.</string>
    <string name="facebook_app_id">125515072005255</string>
    <string name="fb_login_protocol_scheme">fb125515072005255</string>
    <string name="verify_text"><u>Verify</u></string>
    <string name="verified_text">Verified</string>
    <string name="learning">Learning</string>
    <string name="practice_questions">Practice Questions</string>
    <string name="exam">Exam</string>
    <string name="test">Test</string>
    <string name="practice_test">Practice Test</string>
    <string name="my_test">Practice Test</string>
    <string name="popular_test">Popular Test</string>
    <string name="recent_test">Recent Test</string>
    <string name="attended_by_friends">Attended By Friends</string>
    <string name="shared_with_you">Shared With You</string>
    <string name="shared_by_you">Shared With Friends</string>
    <string name="create_test">Create Test</string>
    <string name="favourite_test">Favourite Test</string>
    <string name="questions">Questions</string>
    <string name="saved_questions">Saved Questions</string>
    <string name="test_filter">Test Filters</string>
    <string name="filters">Filters</string>
    <string name="select_board">Board</string>
    <string name="trending_questions">Trending Questions</string>
    <string name="popular_questions">Popular Questions</string>
    <string name="recent_questions">Recent Questions</string>
    <string name="saved">Saved</string>
    <string name="reviews">Reviews</string>
    <string name="published">Published</string>
    <string name="notifications">Notifications</string>
    <string name="home">home</string>
    <string name="doubt_text">What doubt you want to post about?</string>
    <string name="select_question">Select Question</string>
    <string name="select_subject">Select Subject</string>
    <string name="select_chapter">Select Chapter</string>
    <string-array name="Select">
        <item>Student</item>
        <item>Parent</item>
        <item>Teacher</item>
        <item>Professional</item>
        <item>Councellor</item>
    </string-array>
    <string-array name="Class">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
    </string-array>
    <string-array name="UniversityBoard">
        <item>Aligarh Muslim University</item>
        <item>Oxford University</item>
        <item>University Of Columbia</item>
        <item>Texas University</item>
        <item>University Of Utah</item>
    </string-array>
    <string-array name="Country">
        <item>India</item>
        <item>Bangladesh</item>
        <item>United States</item>
        <item>England</item>
        <item>France</item>
    </string-array>
    <string-array name="State">
        <item>Maharashtra</item>
        <item>Telangana</item>
        <item>Gujrat</item>
        <item>Delhi</item>
        <item>Goa</item>
    </string-array>
    <string-array name="author">
        <item>Sharan</item>
        <item>Narayana</item>
        <item>Dannis Ritche</item>
        <item>Kiran Kumar</item>
        <item>Navneet</item>
        <item>All In One</item>
        <item>Sharan</item>
        <item>Narayana</item>
        <item>Dannis Ritche</item>
        <item>Kiran Kumar</item>
        <item>Navneet</item>
        <item>All In One</item>
    </string-array>
    <string name="account_info">Account Information</string>
    <string name="personal_info">Personal Information</string>
    <string name="educational_info">Educational Information</string>
    <string name="employement_info">Employement Information</string>
    <string name="preferences">Preferences</string>
    <string name="birthdate">Birth Date</string>
    <string name="city">City</string>
    <string name="alt_email">Alternate Email</string>
    <string name="negative_marks">Marks (<u>-ve</u>)</string>
    <string name="alt_mobile">Alternate Mobile</string>
    <string name="available_courses">Available courses for study</string>
    <string name="no_education">No education details available</string>
    <string name="copyrights">\u00a9 JangleTech All rights reserved</string>
    <string name="qoogol_version_1_0">Qoogol Version </string>
    <string name="menu_learning">Learning</string>
    <string name="menu_learning_details">Question Details</string>
    <string name="menu_test">Practise Test</string>
    <string name="menu_questions">Questions</string>
    <string name="personal_info_tab">Personal</string>
    <string name="educational_info_tab">Educational</string>
    <string name="test_analytics">Test Analytics</string>
    <string name="question_analytics">Question Analytics</string>
    <string name="verify_mobile_dialog_msg">Please type the verification code sent to your mobile number</string>
    <string name="verify_email_dialog_msg">Please type the verification code sent to your email</string>
    <string name="question">A pie chart with one or more slices offset is called a(n)_____________ple chart. \n
    A pie chart with one or more slices offset is called a(n)_____________ple chart. \n
    A pie chart with one or more slices offset is called a(n)_____________ple chart. \n
    A pie chart with one or more slices offset is called a(n)_____________ple chart. \n
    A pie chart with one or more slices offset is called a(n)_____________ple chart.</string>
    <string name="title_activity_practise_questions">PractiseQuestionsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="home_second">Home Second</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="old_password">Current Password</string>
    <string name="remove">Remove</string>
    <string name="block">Block</string>
    <string name="add_friend">Add Friend</string>
    <string name="unblock">Unblock</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="pending_req">Pending Requests</string>
    <string name="view_prof">View Profile</string>
    <string name="blockedconnection">Blocked Connections</string>
    <string name="importContacts">Import Contacts</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="deactivate_my_account">Deactivate My Account</string>
    <string name="blocked_list">Blocked List</string>
    <string name="settings">Settings</string>
    <string name="faq">FAQ</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="test_sections">Add Test Sections</string>
    <string name="create_test_basic_details">Test Basic Details</string>
    <string name="created_tests">My Created Tests</string>
    <string name="add_question">Add Test Question</string>
    <string name="modify_syllabus">Modify Syllabus</string>
</resources>