<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.settings.SettingsFragment">

        <TextView
            android:id="@+id/tvBlockedList"
            style="@style/SettingTextViewStyle"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/blocked_list"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:drawableStart="@drawable/ic_account" />


        <TextView
            app:layout_constraintTop_toBottomOf="@+id/tvBlockedList"
            android:id="@+id/tvDeactivateAccount"
            style="@style/SettingTextViewStyle"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/deactivate_my_account"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:drawableStart="@drawable/ic_account" />

        <TextView
            app:layout_constraintTop_toBottomOf="@+id/tvDeactivateAccount"
            android:id="@+id/tvLogout"
            style="@style/SettingTextViewStyle"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/logout"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:drawableStart="@drawable/ic_logout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>